@@ -176,9 +176,9 @@ setMethod("norm", signature(x = "ldenseMatrix", type = "character"),
           .Call(dgeMatrix_norm, as(as(x,"dMatrix"),"dgeMatrix"), type),
 	  valueClass = "numeric")
 
-.rcond_via_d <- function(x, norm, ...) {
-    x <- as(as(x, "dMatrix"), "dgeMatrix")
-}
+.rcond_via_d <- function(x, norm, ...)
+    rcond(as(as(x, "dMatrix"), "dgeMatrix"), norm=norm, ...)
+
 
 setMethod("rcond", signature(x = "ldenseMatrix", norm = "character"),
 	  .rcond_via_d, valueClass = "numeric")
