@@ -1,5 +1,5 @@
 
-R version 2.9.1 Patched (2009-07-02 r48895)
+R version 2.9.1 Patched (2009-07-18 r48959)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -117,10 +117,21 @@ m >= m for all: ok
 m < m for none: ok
 > mn["rd", "D"]
 [1] 25
+> ## Printing sparse colnames:
+> ms <- as(mn,"sparseMatrix")
+> ms[sample(28, 20)] <- 0
+diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1)
+> ms <- t(rbind2(ms, 3*ms))
+> cnam1 <- capture.output(show(ms))[2] ; op <- options("sparse.colnames" = "abb3")
+   [[ suppressing 14 column names 'ra', 'rb', 'rc' ... ]]
+> cnam2 <- capture.output(show(ms))[2] ; options(op) # revert
 > stopifnot(identical(mn["rc", "D"], mn[3,4]), mn[3,4] == 24,
 +           identical(mn[, "A"], mn[,1]), mn[,1] == 1:7,
-+           identical(mn[c("re", "rb"), "B"], mn[c(5,2), 2])
-+           )
++           identical(mn[c("re", "rb"), "B"], mn[c(5,2), 2]),
++ 	  ## sparse printing
++ 	  grep("^ +$", cnam1) == 1, # cnam1 is empty
++ 	  identical(cnam2,
++ 		    paste(" ", paste(rep(rownames(mn), 2), collapse=" "))))
 > 
 > mo <- m
 > m[2,3] <- 100
@@ -1273,7 +1284,7 @@ attr(,"package")
 + 	  identical(thCol,  fx[,5762]))
 > 
 > cat('Time elapsed: ', (.pt <- proc.time()),'\n') # "stats"
-Time elapsed:  36.774 2.888 52.8 0 0 
+Time elapsed:  21.691 1.553 25.207 0 0 
 > ##
 > cat("checkMatrix() of all: \n---------\n")
 checkMatrix() of all: 
@@ -1380,6 +1391,7 @@ mc
 mc0 
 mn 
 mo 
+ms 
 mt 
 mt0 
 ne. 
@@ -1412,7 +1424,7 @@ suboptimal implementation of sparse 'symm. o symm.'
 x.x. 
 suboptimal implementation of sparse 'symm. o symm.'
 > cat('Time elapsed: ', proc.time() - .pt,'\n') # "stats"
-Time elapsed:  24.365 2.2 30.279 0 0 
+Time elapsed:  13.831 0.68 14.511 0 0 
 > 
 > if(!interactive()) warnings()
 NULL
